Made some large changes. First, I realize I never check to make sure the current player is making performing a move so we check for that now. Also, we have a screen when a player wins. We also made some aesthetic changes. Yellow cards are now purple (we will probably change the color later). We also made the home links white so that they're visible and the player view boxes have thicker borders

--- a/src/styling/App.scss
+++ b/src/styling/App.scss
@@ -24,6 +24,12 @@ h3 {
 }
 
 
+.home{
+    a{
+        color: white;
+    }
+}
+
 .card {
     border-color: white;
     border-width: 0.5px;
@@ -89,7 +95,7 @@ h3 {
     overflow-x: scroll;
 
     .player-view {
-        border: orange 1px solid;
+        border: orange 3px solid;
         width: 100%;
     }
 }
@@ -169,7 +175,8 @@ h3 {
         
         min-height: $card-height;
 
-        background-color: purple;
+        background-color: plum
+        ;
         
     }
     
